--- a/pokypka.html
+++ b/pokypka.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">меню навигации</a>
+          <a class="navbar-brand" href="zachem.html">меню навигации</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -106,7 +106,7 @@
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                <h1>Чтобы купить данную валюту вам надо произвести <a href="oplata.html">оплату</a> и оставить сверху свою электронную почту после потверждение оплаты вам требуется зайти в преложение или на сайт вашей почти и связаться с помощником он вам все сделает и отправит</h1>>
+                <h1>Чтобы купить данную игру вам надо произвести <a href="oplata.html">оплату</a> и оставить сверху свою электронную почту после потверждение оплаты вам требуется зайти в преложение или на сайт вашей почти и связаться с помощником он вам все сделает и отправит</h1>>
               </div>
             </div>
           </div>
