--- a/ok.html
+++ b/ok.html
@@ -1,3 +1,73 @@
-<h1> (тут тип оплаты сделать) </h1>
-<H1> спасибо</H1>
-<h1><a href="fifa23.html">вернуться</a></h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>oplata</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="fifa23.css">
+</head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="zachem.html">🧭меню навигации🧭</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="fifa23.html">🎟Главная🎟</a>
+              </li>
+              <li class="nav-item">
+              </li>
+              <a class="nav-link" href="fifa23.html">  </a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  📋список всех сылок сайта📋
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="yslovia.html">условия</a></li>
+                  <li><a class="dropdown-item" href="reklama.html">условия покупки рекламы</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="ok.html">сама покупка рекламы</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  🤫создатель сайта🤫
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="">илья</a></li>
+                  <li><a class="dropdown-item" href="">илья</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="">илья</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+              <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+
+      <div class="container" style="width: 28rem;">
+        <img src="https://masterpiecer-images.s3.yandex.net/08198c104f3511ee943b9a793c1e62bc:upscaled" class="card-img-top" alt="...">
+        <div class="card-body" >
+          <h5 class="card-title">💰Оплата💰 (киньте на мой киви)</h5>
+          <p class="card-text">
+
+            </p>
+          <a href="fifa23.html" class="btn btn-primary">✅Вернуться обратно✅</a>
+          
+        </div>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
