--- a/reklama.html
+++ b/reklama.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-        <a class="navbar-brand" href="fifa23.html">Все условия к покупке рекламы                                     вернуться назад</a>
+        <a class="navbar-brand" href="fifa23.html">⬇️Все условия к покупке рекламы⬇️                                     ✔вернуться назад✔</a>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading1">Первое</a>
@@ -22,7 +22,7 @@
               <li><a class="dropdown-item" href="#scrollspyHeading3">Третие</a></li>
               <li><a class="dropdown-item" href="#scrollspyHeading4">Четвертое</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#scrollspyHeading5">Купит рекламу</a></li>
+              <li><a class="dropdown-item" href="#scrollspyHeading5">Купить рекламу✅</a></li>
             </ul>
           </li>
         </ul>
