--- a/pokypka.html
+++ b/pokypka.html
@@ -59,7 +59,7 @@
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">Мы никогда никому не передадим вашу электронную почту.</div>
+        <div id="emailHelp" class="form-text">Мы никогда никому не передадим вашу электронную почту.(🤞)</div>
       </div>
       <button type="submit" class="btn btn-primary">Отправить</button>
 
