--- a/fifa23.html
+++ b/fifa23.html
@@ -395,7 +395,7 @@
                 <table>
                   <td>
                     <div class="card" style="width: 18rem;">
-                      <img src="https://ribakitshop.ru/uploads/product/4100/4150/reklama.jpg" class="card-img-top" alt="...">
+                      <img src="https://static.tildacdn.com/tild3735-3932-4639-b766-363639383434/logoinz.png" class="card-img-top" alt="...">
                       <div class="card-body">
                       </div>
                     </td>
